--- a/agents/update/update-document-in-batch.yaml
+++ b/agents/update/update-document-in-batch.yaml
@@ -1,6 +1,6 @@
 type: team
-name: generateAndTranslateDocument
-description: Generate and translate documents
+name: updateDocumentInBatch
+description: Update individual document within a batch update
 skills:
   - ../utils/transform-detail-datasources.mjs
   - type: team
@@ -23,13 +23,6 @@ skills:
       max_iterations: 5
       return_last_on_max_iterations: true
     task_title: Generate document for '{{ title }}'
-  - type: transform
-    task_render_mode: hide
-    jsonata: |
-      $merge([
-        $,
-        { "feedback": "" }
-      ])
 input_schema:
   type: object
   properties:
