feat: add generate structure without tools and update related prompts

--- a/agents/generate/generate-structure-without-tools.yaml
+++ b/agents/generate/generate-structure-without-tools.yaml
@@ -1,13 +1,10 @@
-name: generateStructure
+name: generateStructureWithoutTools
 description: Generate the structure and organization of your documentation
 instructions:
   - role: system
     url: ../../prompts/structure/generate/system-prompt.md
   - role: user
     url: ../../prompts/structure/generate/user-prompt.md
-skills:
-  - ./document-structure-tools/generate-sub-structure.mjs
-tool_calls_concurrency: 5
 input_schema:
   type: object
   properties:
