feat: update document structure tools and enhance prompt documentation with file usage guidelines

--- a/agents/generate/update-document-structure.yaml
+++ b/agents/generate/update-document-structure.yaml
@@ -37,3 +37,6 @@ skills:
   - ./document-structure-tools/delete-document.mjs
   - ./document-structure-tools/update-document.mjs
   - ./document-structure-tools/move-document.mjs
+  - ../update/fs-tools/glob.mjs
+  - ../update/fs-tools/grep.mjs
+  - ../update/fs-tools/read-file.mjs
