--- a/aigne.yaml
+++ b/aigne.yaml
@@ -54,6 +54,7 @@ agents:
   - ./agents/clear/clear-generated-docs.mjs
   - ./agents/clear/clear-document-config.mjs
   - ./agents/clear/clear-auth-tokens.mjs
+  - ./agents/clear/clear-deployment-config.mjs
 
   # Utilities
   - ./agents/utils/load-sources.mjs
