--- a/.aigne/doc-smith/preferences.yml
+++ b/.aigne/doc-smith/preferences.yml
@@ -1,4 +1,16 @@
 rules:
+  - id: pref_cbc8005011c08ca0
+    active: true
+    scope: translation
+    rule: 在名为 'Cleanup Targets' 的表格中，'Target' 列必须保留原文，不得翻译。
+    feedback: Cleanup Targets 表格中的 Target 列不要翻译
+    createdAt: 2025-10-11T13:22:06.529Z
+  - id: pref_545cabc521ecd4a5
+    active: true
+    scope: translation
+    rule: 专属名词 'AIGNE Framework' 无需翻译, 必须保留原文。
+    feedback: AIGNE Framework 是专属名词而且拥有自己的链接,无需翻译
+    createdAt: 2025-10-11T12:26:37.517Z
   - id: pref_6e612d7ca8b7f3b6
     active: true
     scope: document
