--- a/.aigne/doc-smith/history.yaml
+++ b/.aigne/doc-smith/history.yaml
@@ -1,38 +1,37 @@
 entries:
   - timestamp: 2025-10-11T13:21:51.992Z
     operation: translation_update
-    feedback: Cleanup Targets 表格中的 Target 列不要翻译
+    feedback: Do not translate the Target column in the Cleanup Targets table.
     documentPath: /guides/cleaning-up
   - timestamp: 2025-10-11T13:20:30.314Z
     operation: document_update
-    feedback: Cleanup Targets 中的 Target  不全, 需要补齐, 对应的描述也需要更新. 另外 Target 的值使用原始的枚举值, 比如 generatedDocs
+    feedback: The targets in Cleanup Targets are incomplete and need to be supplemented. The corresponding descriptions also require updating. Additionally, the target values should use the original enumeration values, such as 'generatedDocs'.
     documentPath: /guides/cleaning-up
   - timestamp: 2025-10-11T13:03:20.327Z
     operation: document_update
-    feedback: Viewing Update History 中 history 命令的两个别名 demo 可以合并到一个 code block. Understanding the
-      History Output 中 Short Hash 现在有 8 个字符. 另外操作类型是下划线分隔,比如 'document_update'
+    feedback: The two aliases for the 'history' command in Viewing Update History can be combined into a single code block. The Short Hash in Understanding the History Output now consists of 8 characters. Additionally, operation types are separated by underscores, such as 'document_update'.
     documentPath: /guides/managing-history
   - timestamp: 2025-10-11T12:56:23.107Z
     operation: document_update
-    feedback: 交互模式中,翻译后的文件会以添加后缀的方式保存在同一目录,而不是特殊的语言目录
+    feedback: In interactive mode, translated files are saved with a suffix appended to their original filenames within the same directory, rather than in dedicated language directories.
     documentPath: /guides/translating-documentation
   - timestamp: 2025-10-11T12:50:25.563Z
     operation: document_update
-    feedback: demo 中的 docs 参数的值应该是 '-' 分隔的路径而不是 '/','.md' 要保留
+    feedback: The value of the 'docs' parameter in the demo should be a path separated by '-' rather than '/', and '.md' should be preserved.
     documentPath: /guides/updating-documentation
   - timestamp: 2025-10-11T12:46:37.507Z
     operation: document_update
-    feedback: demo 中的 docs 参数的值应该是 '-' 分隔的路径而不是 '/'
+    feedback: The value of the 'docs' parameter in the demo should be a path separated by '-' rather than '/'.
     documentPath: /guides/updating-documentation
   - timestamp: 2025-10-11T12:39:53.222Z
     operation: document_update
-    feedback: Review the Documentation Structure 中的提示词过时了需要更新. Command Parameters 也需要更新
+    feedback: The prompts in Review the Documentation Structure are outdated and need updating. Command Parameters also require updating.
     documentPath: /guides/generating-documentation
   - timestamp: 2025-10-11T12:26:24.598Z
     operation: translation_update
-    feedback: AIGNE Framework 是专属名词而且拥有自己的链接,无需翻译
+    feedback: AIGNE Framework is a proper noun and has its own link; no translation is required.
     documentPath: /overview
   - timestamp: 2025-10-11T12:24:05.477Z
     operation: document_update
-    feedback: 为AIGNE Framework 提供链接 https://www.aigne.io/framework
+    feedback: Add a link to the AIGNE Framework 'https://www.aigne.io/framework'.
     documentPath: /overview
