--- a/agents/update/generate-document.yaml
+++ b/agents/update/generate-document.yaml
@@ -54,31 +54,31 @@ afs:
         description: |
           Codebase of the project to be documented used as context for document generation,
           should search and read as needed while generating document content
-# skills:
+skills:
   # FIXME: @zhanghan temporary disable diagram tool
-  # - type: team
-  #   task_render_mode: collapse
-  #   name: generateDiagram
-  #   skills:
-  #     - ../generate/draw-diagram.yaml
-  #     - ../generate/wrap-diagram-code.mjs
-  #   reflection:
-  #     reviewer: ../generate/check-diagram.mjs
-  #     is_approved: isValid
-  #     max_iterations: 5
-  #     return_last_on_max_iterations: false
-  #     custom_error_message: "MUST NOT generate any diagram: validation failed after max iterations."
-  #   input_schema:
-  #     type: object
-  #     properties:
-  #       documentContent:
-  #         type: string
-  #         description: The **raw text content** of the current document. (**Note:** This is the original document and **does not include** any existing diagram source code.)
-  #     required:
-  #       - documentContent
-  #   output_schema:
-  #     type: object
-  #     properties:
-  #       diagramSourceCode:
-  #         type: string
-  #         description: The **diagram source code** generated from the input text.
+  - type: team
+    task_render_mode: collapse
+    name: generateDiagram
+    skills:
+      - ../generate/draw-diagram.yaml
+      - ../generate/wrap-diagram-code.mjs
+    reflection:
+      reviewer: ../generate/check-diagram.mjs
+      is_approved: isValid
+      max_iterations: 5
+      return_last_on_max_iterations: false
+      custom_error_message: "MUST NOT generate any diagram: validation failed after max iterations."
+    input_schema:
+      type: object
+      properties:
+        documentContent:
+          type: string
+          description: The **raw text content** of the current document. (**Note:** This is the original document and **does not include** any existing diagram source code.)
+      required:
+        - documentContent
+    output_schema:
+      type: object
+      properties:
+        diagramSourceCode:
+          type: string
+          description: The **diagram source code** generated from the input text.
