feat(media): support filter and describe and use media files with AI

--- a/agents/clear/index.yaml
+++ b/agents/clear/index.yaml
@@ -22,3 +22,5 @@ input_schema:
           - generatedDocs
           - documentConfig
           - authTokens
+          - deploymentConfig
+          - mediaDescription
