--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fs-extra": "^11.3.1",
     "glob": "^11.0.3",
     "gpt-tokenizer": "^3.2.0",
+    "image-size": "^2.0.2",
     "isbinaryfile": "^5.0.6",
     "jsdom": "^26.1.0",
     "marked": "^15.0.12",
