fix: update pages

--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -11,7 +11,7 @@ sections:
         link: "link:///quick-start"
       - text: "View on GitHub"
         link: "https://github.com/AIGNE-io/aigne-doc-smith"
-    splitHeroRightImage: "mediakit://doc-regenerate.png"
+    splitHeroRightImage: "mediakit://hero-docsmith-landing.png"
   - sectionName: "WhyDocSmith"
     sectionSummary: "This section presents the five core benefits of DocSmith in a visually engaging bento grid, making it easy for users to quickly scan and understand the key advantages like intelligent analysis and zero-config setup."
     list:
@@ -46,24 +46,32 @@ sections:
     list:
       - sectionName: "GenerateDocs"
         sectionSummary: "Visual demonstration of the initial documentation generation command, showing users how easy it is to get started."
-        commandTitle: "1. Generate Your First Docs"
-        command: "aigne doc generate"
-        terminalPlaybackData: "@generate.json"
+        contentCardTitle: "1. Generate Your First Docs"
+        contentCardDescription: "Run one command to auto-detect your project, analyze your code, and generate comprehensive documentation from scratch."
+        contentCardBottomCode:
+          name: "generate.json"
+          content: "aigne doc generate"
       - sectionName: "UpdateDocs"
         sectionSummary: "Shows the seamless update process, highlighting how DocSmith keeps documentation fresh as code evolves."
-        commandTitle: "2. Keep Docs Fresh, Effortlessly"
-        command: "aigne doc update"
-        terminalPlaybackData: "@update.json"
+        contentCardTitle: "2. Keep Docs Fresh, Effortlessly"
+        contentCardDescription: "As your code changes, intelligently update only the relevant sections of your documentation with a simple command."
+        contentCardBottomCode:
+          name: "update.json"
+          content: "aigne doc update"
       - sectionName: "TranslateDocs"
         sectionSummary: "Demonstrates the one-command translation feature, emphasizing the power to go global instantly."
-        commandTitle: "3. Go Global with One Command"
-        command: "aigne doc translate"
-        terminalPlaybackData: "@translate.json"
+        contentCardTitle: "3. Go Global with One Command"
+        contentCardDescription: "Instantly translate your docs into 12 languages with professional, context-aware AI to reach a worldwide audience."
+        contentCardBottomCode:
+          name: "translate.json"
+          content: "aigne doc translate"
       - sectionName: "PublishDocs"
         sectionSummary: "Concludes the workflow by showing the publishing step, giving users a clear path from generation to live documentation."
-        commandTitle: "4. Publish and Share Instantly"
-        command: "aigne doc publish"
-        terminalPlaybackData: "@publish.json"
+        contentCardTitle: "4. Publish and Share Instantly"
+        contentCardDescription: "Make your documentation live on the DocSmith Cloud or your own platform, and share it with your team in seconds."
+        contentCardBottomCode:
+          name: "publish.json"
+          content: "aigne doc publish"
   - sectionName: "FeatureHighlights"
     sectionSummary: "This section dives deeper into four key feature areas using a two-column grid of image cards, providing more detail and visual proof for capabilities like AI generation, translation, LLM integration, and publishing."
     twoColumnGridTitle: "Powerful Features, Simple Workflow"
@@ -92,10 +100,10 @@ sections:
     sectionSummary: "This section speaks directly to business users, summarizing enterprise-grade features and providing a clear call-to-action to explore the dedicated enterprise page, building confidence for production use."
     featureSectionTitle: "Built for Teams and Production Workflows"
     featureSectionDescription: "DocSmith offers enterprise-grade features including team collaboration, custom branding, API integration, and private cloud deployment to fit your security and compliance needs."
-    featureSectionBottomImage: "mediakit://doc-complete-setup.png"
     featureSectionAction:
       text: "Explore Enterprise Features"
       link: "link:///enterprise"
+    featureSectionBottomImage: "mediakit://doc-complete-setup.png"
   - sectionName: "FinalCta"
     sectionSummary: "A final, high-energy call-to-action that encourages users to take the next step, whether it's starting the quick start guide or joining the community, leaving them excited and ready to engage."
     ctaTitle: "Ready to Revolutionize Your Documentation?"
